Entrega2-Parser/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM statement
Rule 2     statement -> ID ASSIGN expression
Rule 3     statement -> OPENCURLY statement_list CLOSECURLY
Rule 4     statement -> OPENCURLY USING declare_list IN statement_list CLOSECURLY
Rule 5     declare_list -> data_type declare_comma_list SEMICOLON
Rule 6     declare_list -> declare_list data_type declare_comma_list SEMICOLON
Rule 7     declare_comma_list -> ID
Rule 8     declare_comma_list -> declare_comma_list COMMA ID
Rule 9     statement_list -> <empty>
Rule 10    statement_list -> statement_list statement SEMICOLON
Rule 11    data_type -> INT
Rule 12    data_type -> BOOL
Rule 13    data_type -> SET
Rule 14    statement -> SCAN ID
Rule 15    statement -> PRINT comma_list
Rule 16    statement -> PRINTLN comma_list
Rule 17    comma_list -> expression
Rule 18    comma_list -> comma_list COMMA expression
Rule 19    statement -> IF OPENPAREN expression CLOSEPAREN statement ELSE statement
Rule 20    statement -> IF OPENPAREN expression CLOSEPAREN statement
Rule 21    statement -> FOR ID MAX expression DO statement
Rule 22    statement -> FOR ID MIN expression DO statement
Rule 23    statement -> WHILE OPENPAREN expression CLOSEPAREN DO statement
Rule 24    statement -> REPEAT statement WHILE OPENPAREN expression CLOSEPAREN
Rule 25    statement -> REPEAT statement WHILE OPENPAREN expression CLOSEPAREN DO statement
Rule 26    expression -> NUMBER
Rule 27    expression -> TRUE
Rule 28    expression -> FALSE
Rule 29    expression -> OPENCURLY comma_list CLOSECURLY
Rule 30    expression -> STRING
Rule 31    expression -> ID
Rule 32    expression -> OPENPAREN expression CLOSEPAREN
Rule 33    expression -> expression PLUS expression
Rule 34    expression -> expression MINUS expression
Rule 35    expression -> expression TIMES expression
Rule 36    expression -> expression DIVIDE expression
Rule 37    expression -> expression MODULE expression
Rule 38    expression -> MINUS expression
Rule 39    expression -> expression SETUNION expression
Rule 40    expression -> expression SETINTERSECTION expression
Rule 41    expression -> expression SETDIFFERENCE expression
Rule 42    expression -> SETMAX expression
Rule 43    expression -> SETMIN expression
Rule 44    expression -> SETLEN expression
Rule 45    expression -> expression SETPLUS expression
Rule 46    expression -> expression SETMINUS expression
Rule 47    expression -> expression SETTIMES expression
Rule 48    expression -> expression SETDIVITION expression
Rule 49    expression -> expression SETMOD expression
Rule 50    expression -> expression OR expression
Rule 51    expression -> expression AND expression
Rule 52    expression -> NOT expression
Rule 53    expression -> expression LESS expression
Rule 54    expression -> expression LESSEQ expression
Rule 55    expression -> expression GREAT expression
Rule 56    expression -> expression GREATEQ expression
Rule 57    expression -> expression EQUAL expression
Rule 58    expression -> expression UNEQUAL expression
Rule 59    expression -> expression SETBELONG expression

Terminals, with rules where they appear

AND                  : 51
ASSIGN               : 2
BOOL                 : 12
CLOSECURLY           : 3 4 29
CLOSEPAREN           : 19 20 23 24 25 32
COMMA                : 8 18
DIVIDE               : 36
DO                   : 21 22 23 25
ELSE                 : 19
EQUAL                : 57
FALSE                : 28
FOR                  : 21 22
GREAT                : 55
GREATEQ              : 56
ID                   : 2 7 8 14 21 22 31
IF                   : 19 20
IN                   : 4
INT                  : 11
LESS                 : 53
LESSEQ               : 54
MAX                  : 21
MIN                  : 22
MINUS                : 34 38
MODULE               : 37
NOT                  : 52
NUMBER               : 26
OPENCURLY            : 3 4 29
OPENPAREN            : 19 20 23 24 25 32
OR                   : 50
PLUS                 : 33
PRINT                : 15
PRINTLN              : 16
PROGRAM              : 1
REPEAT               : 24 25
SCAN                 : 14
SEMICOLON            : 5 6 10
SET                  : 13
SETBELONG            : 59
SETDIFFERENCE        : 41
SETDIVITION          : 48
SETINTERSECTION      : 40
SETLEN               : 44
SETMAX               : 42
SETMIN               : 43
SETMINUS             : 46
SETMOD               : 49
SETPLUS              : 45
SETTIMES             : 47
SETUNION             : 39
STRING               : 30
TIMES                : 35
TRUE                 : 27
UNEQUAL              : 58
USING                : 4
WHILE                : 23 24 25
error                : 

Nonterminals, with rules where they appear

comma_list           : 15 16 18 29
data_type            : 5 6
declare_comma_list   : 5 6 8
declare_list         : 4 6
expression           : 2 17 18 19 20 21 22 23 24 25 32 33 33 34 34 35 35 36 36 37 37 38 39 39 40 40 41 41 42 43 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59
program              : 0
statement            : 1 10 19 19 20 21 22 23 24 25 25
statement_list       : 3 4 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM statement

    PROGRAM         shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> PROGRAM . statement
    (2) statement -> . ID ASSIGN expression
    (3) statement -> . OPENCURLY statement_list CLOSECURLY
    (4) statement -> . OPENCURLY USING declare_list IN statement_list CLOSECURLY
    (14) statement -> . SCAN ID
    (15) statement -> . PRINT comma_list
    (16) statement -> . PRINTLN comma_list
    (19) statement -> . IF OPENPAREN expression CLOSEPAREN statement ELSE statement
    (20) statement -> . IF OPENPAREN expression CLOSEPAREN statement
    (21) statement -> . FOR ID MAX expression DO statement
    (22) statement -> . FOR ID MIN expression DO statement
    (23) statement -> . WHILE OPENPAREN expression CLOSEPAREN DO statement
    (24) statement -> . REPEAT statement WHILE OPENPAREN expression CLOSEPAREN
    (25) statement -> . REPEAT statement WHILE OPENPAREN expression CLOSEPAREN DO statement

    ID              shift and go to state 11
    OPENCURLY       shift and go to state 7
    SCAN            shift and go to state 3
    PRINT           shift and go to state 6
    PRINTLN         shift and go to state 4
    IF              shift and go to state 12
    FOR             shift and go to state 10
    WHILE           shift and go to state 5
    REPEAT          shift and go to state 9

    statement                      shift and go to state 8

state 2

    (0) S' -> program .



state 3

    (14) statement -> SCAN . ID

    ID              shift and go to state 13


state 4

    (16) statement -> PRINTLN . comma_list
    (17) comma_list -> . expression
    (18) comma_list -> . comma_list COMMA expression
    (26) expression -> . NUMBER
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . OPENCURLY comma_list CLOSECURLY
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . OPENPAREN expression CLOSEPAREN
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MODULE expression
    (38) expression -> . MINUS expression
    (39) expression -> . expression SETUNION expression
    (40) expression -> . expression SETINTERSECTION expression
    (41) expression -> . expression SETDIFFERENCE expression
    (42) expression -> . SETMAX expression
    (43) expression -> . SETMIN expression
    (44) expression -> . SETLEN expression
    (45) expression -> . expression SETPLUS expression
    (46) expression -> . expression SETMINUS expression
    (47) expression -> . expression SETTIMES expression
    (48) expression -> . expression SETDIVITION expression
    (49) expression -> . expression SETMOD expression
    (50) expression -> . expression OR expression
    (51) expression -> . expression AND expression
    (52) expression -> . NOT expression
    (53) expression -> . expression LESS expression
    (54) expression -> . expression LESSEQ expression
    (55) expression -> . expression GREAT expression
    (56) expression -> . expression GREATEQ expression
    (57) expression -> . expression EQUAL expression
    (58) expression -> . expression UNEQUAL expression
    (59) expression -> . expression SETBELONG expression

    NUMBER          shift and go to state 14
    TRUE            shift and go to state 15
    FALSE           shift and go to state 26
    OPENCURLY       shift and go to state 17
    STRING          shift and go to state 20
    ID              shift and go to state 24
    OPENPAREN       shift and go to state 16
    MINUS           shift and go to state 18
    SETMAX          shift and go to state 22
    SETMIN          shift and go to state 25
    SETLEN          shift and go to state 21
    NOT             shift and go to state 23

    expression                     shift and go to state 27
    comma_list                     shift and go to state 19

state 5

    (23) statement -> WHILE . OPENPAREN expression CLOSEPAREN DO statement

    OPENPAREN       shift and go to state 28


state 6

    (15) statement -> PRINT . comma_list
    (17) comma_list -> . expression
    (18) comma_list -> . comma_list COMMA expression
    (26) expression -> . NUMBER
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . OPENCURLY comma_list CLOSECURLY
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . OPENPAREN expression CLOSEPAREN
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MODULE expression
    (38) expression -> . MINUS expression
    (39) expression -> . expression SETUNION expression
    (40) expression -> . expression SETINTERSECTION expression
    (41) expression -> . expression SETDIFFERENCE expression
    (42) expression -> . SETMAX expression
    (43) expression -> . SETMIN expression
    (44) expression -> . SETLEN expression
    (45) expression -> . expression SETPLUS expression
    (46) expression -> . expression SETMINUS expression
    (47) expression -> . expression SETTIMES expression
    (48) expression -> . expression SETDIVITION expression
    (49) expression -> . expression SETMOD expression
    (50) expression -> . expression OR expression
    (51) expression -> . expression AND expression
    (52) expression -> . NOT expression
    (53) expression -> . expression LESS expression
    (54) expression -> . expression LESSEQ expression
    (55) expression -> . expression GREAT expression
    (56) expression -> . expression GREATEQ expression
    (57) expression -> . expression EQUAL expression
    (58) expression -> . expression UNEQUAL expression
    (59) expression -> . expression SETBELONG expression

    NUMBER          shift and go to state 14
    TRUE            shift and go to state 15
    FALSE           shift and go to state 26
    OPENCURLY       shift and go to state 17
    STRING          shift and go to state 20
    ID              shift and go to state 24
    OPENPAREN       shift and go to state 16
    MINUS           shift and go to state 18
    SETMAX          shift and go to state 22
    SETMIN          shift and go to state 25
    SETLEN          shift and go to state 21
    NOT             shift and go to state 23

    expression                     shift and go to state 27
    comma_list                     shift and go to state 29

state 7

    (3) statement -> OPENCURLY . statement_list CLOSECURLY
    (4) statement -> OPENCURLY . USING declare_list IN statement_list CLOSECURLY
    (9) statement_list -> .
    (10) statement_list -> . statement_list statement SEMICOLON

    USING           shift and go to state 31
    CLOSECURLY      reduce using rule 9 (statement_list -> .)
    ID              reduce using rule 9 (statement_list -> .)
    OPENCURLY       reduce using rule 9 (statement_list -> .)
    SCAN            reduce using rule 9 (statement_list -> .)
    PRINT           reduce using rule 9 (statement_list -> .)
    PRINTLN         reduce using rule 9 (statement_list -> .)
    IF              reduce using rule 9 (statement_list -> .)
    FOR             reduce using rule 9 (statement_list -> .)
    WHILE           reduce using rule 9 (statement_list -> .)
    REPEAT          reduce using rule 9 (statement_list -> .)

    statement_list                 shift and go to state 30

state 8

    (1) program -> PROGRAM statement .

    $end            reduce using rule 1 (program -> PROGRAM statement .)


state 9

    (24) statement -> REPEAT . statement WHILE OPENPAREN expression CLOSEPAREN
    (25) statement -> REPEAT . statement WHILE OPENPAREN expression CLOSEPAREN DO statement
    (2) statement -> . ID ASSIGN expression
    (3) statement -> . OPENCURLY statement_list CLOSECURLY
    (4) statement -> . OPENCURLY USING declare_list IN statement_list CLOSECURLY
    (14) statement -> . SCAN ID
    (15) statement -> . PRINT comma_list
    (16) statement -> . PRINTLN comma_list
    (19) statement -> . IF OPENPAREN expression CLOSEPAREN statement ELSE statement
    (20) statement -> . IF OPENPAREN expression CLOSEPAREN statement
    (21) statement -> . FOR ID MAX expression DO statement
    (22) statement -> . FOR ID MIN expression DO statement
    (23) statement -> . WHILE OPENPAREN expression CLOSEPAREN DO statement
    (24) statement -> . REPEAT statement WHILE OPENPAREN expression CLOSEPAREN
    (25) statement -> . REPEAT statement WHILE OPENPAREN expression CLOSEPAREN DO statement

    ID              shift and go to state 11
    OPENCURLY       shift and go to state 7
    SCAN            shift and go to state 3
    PRINT           shift and go to state 6
    PRINTLN         shift and go to state 4
    IF              shift and go to state 12
    FOR             shift and go to state 10
    WHILE           shift and go to state 5
    REPEAT          shift and go to state 9

    statement                      shift and go to state 32

state 10

    (21) statement -> FOR . ID MAX expression DO statement
    (22) statement -> FOR . ID MIN expression DO statement

    ID              shift and go to state 33


state 11

    (2) statement -> ID . ASSIGN expression

    ASSIGN          shift and go to state 34


state 12

    (19) statement -> IF . OPENPAREN expression CLOSEPAREN statement ELSE statement
    (20) statement -> IF . OPENPAREN expression CLOSEPAREN statement

    OPENPAREN       shift and go to state 35


state 13

    (14) statement -> SCAN ID .

    ELSE            reduce using rule 14 (statement -> SCAN ID .)
    $end            reduce using rule 14 (statement -> SCAN ID .)
    WHILE           reduce using rule 14 (statement -> SCAN ID .)
    SEMICOLON       reduce using rule 14 (statement -> SCAN ID .)


state 14

    (26) expression -> NUMBER .

    CLOSEPAREN      reduce using rule 26 (expression -> NUMBER .)
    PLUS            reduce using rule 26 (expression -> NUMBER .)
    MINUS           reduce using rule 26 (expression -> NUMBER .)
    TIMES           reduce using rule 26 (expression -> NUMBER .)
    DIVIDE          reduce using rule 26 (expression -> NUMBER .)
    MODULE          reduce using rule 26 (expression -> NUMBER .)
    SETUNION        reduce using rule 26 (expression -> NUMBER .)
    SETINTERSECTION reduce using rule 26 (expression -> NUMBER .)
    SETDIFFERENCE   reduce using rule 26 (expression -> NUMBER .)
    SETPLUS         reduce using rule 26 (expression -> NUMBER .)
    SETMINUS        reduce using rule 26 (expression -> NUMBER .)
    SETTIMES        reduce using rule 26 (expression -> NUMBER .)
    SETDIVITION     reduce using rule 26 (expression -> NUMBER .)
    SETMOD          reduce using rule 26 (expression -> NUMBER .)
    OR              reduce using rule 26 (expression -> NUMBER .)
    AND             reduce using rule 26 (expression -> NUMBER .)
    LESS            reduce using rule 26 (expression -> NUMBER .)
    LESSEQ          reduce using rule 26 (expression -> NUMBER .)
    GREAT           reduce using rule 26 (expression -> NUMBER .)
    GREATEQ         reduce using rule 26 (expression -> NUMBER .)
    EQUAL           reduce using rule 26 (expression -> NUMBER .)
    UNEQUAL         reduce using rule 26 (expression -> NUMBER .)
    SETBELONG       reduce using rule 26 (expression -> NUMBER .)
    COMMA           reduce using rule 26 (expression -> NUMBER .)
    $end            reduce using rule 26 (expression -> NUMBER .)
    WHILE           reduce using rule 26 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 26 (expression -> NUMBER .)
    ELSE            reduce using rule 26 (expression -> NUMBER .)
    CLOSECURLY      reduce using rule 26 (expression -> NUMBER .)
    DO              reduce using rule 26 (expression -> NUMBER .)


state 15

    (27) expression -> TRUE .

    CLOSEPAREN      reduce using rule 27 (expression -> TRUE .)
    PLUS            reduce using rule 27 (expression -> TRUE .)
    MINUS           reduce using rule 27 (expression -> TRUE .)
    TIMES           reduce using rule 27 (expression -> TRUE .)
    DIVIDE          reduce using rule 27 (expression -> TRUE .)
    MODULE          reduce using rule 27 (expression -> TRUE .)
    SETUNION        reduce using rule 27 (expression -> TRUE .)
    SETINTERSECTION reduce using rule 27 (expression -> TRUE .)
    SETDIFFERENCE   reduce using rule 27 (expression -> TRUE .)
    SETPLUS         reduce using rule 27 (expression -> TRUE .)
    SETMINUS        reduce using rule 27 (expression -> TRUE .)
    SETTIMES        reduce using rule 27 (expression -> TRUE .)
    SETDIVITION     reduce using rule 27 (expression -> TRUE .)
    SETMOD          reduce using rule 27 (expression -> TRUE .)
    OR              reduce using rule 27 (expression -> TRUE .)
    AND             reduce using rule 27 (expression -> TRUE .)
    LESS            reduce using rule 27 (expression -> TRUE .)
    LESSEQ          reduce using rule 27 (expression -> TRUE .)
    GREAT           reduce using rule 27 (expression -> TRUE .)
    GREATEQ         reduce using rule 27 (expression -> TRUE .)
    EQUAL           reduce using rule 27 (expression -> TRUE .)
    UNEQUAL         reduce using rule 27 (expression -> TRUE .)
    SETBELONG       reduce using rule 27 (expression -> TRUE .)
    COMMA           reduce using rule 27 (expression -> TRUE .)
    $end            reduce using rule 27 (expression -> TRUE .)
    WHILE           reduce using rule 27 (expression -> TRUE .)
    SEMICOLON       reduce using rule 27 (expression -> TRUE .)
    ELSE            reduce using rule 27 (expression -> TRUE .)
    CLOSECURLY      reduce using rule 27 (expression -> TRUE .)
    DO              reduce using rule 27 (expression -> TRUE .)


state 16

    (32) expression -> OPENPAREN . expression CLOSEPAREN
    (26) expression -> . NUMBER
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . OPENCURLY comma_list CLOSECURLY
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . OPENPAREN expression CLOSEPAREN
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MODULE expression
    (38) expression -> . MINUS expression
    (39) expression -> . expression SETUNION expression
    (40) expression -> . expression SETINTERSECTION expression
    (41) expression -> . expression SETDIFFERENCE expression
    (42) expression -> . SETMAX expression
    (43) expression -> . SETMIN expression
    (44) expression -> . SETLEN expression
    (45) expression -> . expression SETPLUS expression
    (46) expression -> . expression SETMINUS expression
    (47) expression -> . expression SETTIMES expression
    (48) expression -> . expression SETDIVITION expression
    (49) expression -> . expression SETMOD expression
    (50) expression -> . expression OR expression
    (51) expression -> . expression AND expression
    (52) expression -> . NOT expression
    (53) expression -> . expression LESS expression
    (54) expression -> . expression LESSEQ expression
    (55) expression -> . expression GREAT expression
    (56) expression -> . expression GREATEQ expression
    (57) expression -> . expression EQUAL expression
    (58) expression -> . expression UNEQUAL expression
    (59) expression -> . expression SETBELONG expression

    NUMBER          shift and go to state 14
    TRUE            shift and go to state 15
    FALSE           shift and go to state 26
    OPENCURLY       shift and go to state 17
    STRING          shift and go to state 20
    ID              shift and go to state 24
    OPENPAREN       shift and go to state 16
    MINUS           shift and go to state 18
    SETMAX          shift and go to state 22
    SETMIN          shift and go to state 25
    SETLEN          shift and go to state 21
    NOT             shift and go to state 23

    expression                     shift and go to state 36

state 17

    (29) expression -> OPENCURLY . comma_list CLOSECURLY
    (17) comma_list -> . expression
    (18) comma_list -> . comma_list COMMA expression
    (26) expression -> . NUMBER
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . OPENCURLY comma_list CLOSECURLY
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . OPENPAREN expression CLOSEPAREN
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MODULE expression
    (38) expression -> . MINUS expression
    (39) expression -> . expression SETUNION expression
    (40) expression -> . expression SETINTERSECTION expression
    (41) expression -> . expression SETDIFFERENCE expression
    (42) expression -> . SETMAX expression
    (43) expression -> . SETMIN expression
    (44) expression -> . SETLEN expression
    (45) expression -> . expression SETPLUS expression
    (46) expression -> . expression SETMINUS expression
    (47) expression -> . expression SETTIMES expression
    (48) expression -> . expression SETDIVITION expression
    (49) expression -> . expression SETMOD expression
    (50) expression -> . expression OR expression
    (51) expression -> . expression AND expression
    (52) expression -> . NOT expression
    (53) expression -> . expression LESS expression
    (54) expression -> . expression LESSEQ expression
    (55) expression -> . expression GREAT expression
    (56) expression -> . expression GREATEQ expression
    (57) expression -> . expression EQUAL expression
    (58) expression -> . expression UNEQUAL expression
    (59) expression -> . expression SETBELONG expression
